feat: add selected row to datatable

--- a/app/screens/manage_prices_screen.kv
+++ b/app/screens/manage_prices_screen.kv
@@ -360,3 +360,4 @@
                     header_background_color: [1,1,1,0.5]
                     hint_sizes: [0.2,0.4,0.2,0.2]
                     header: ["Local code", "Product", "Quantity", "Provider"]
+                    on_selected_row: root.on_selected_row()
