--- a/app/screens/widgets/datatable.kv
+++ b/app/screens/widgets/datatable.kv
@@ -10,6 +10,10 @@
             radius: [8]
 
 <Row>:
+    halign: 'left'
+    valign: 'top'
+    text_size: self.size
+    selected_color: (.2, .64, .81, 1)
     canvas.before:
         Color: 
             rgba: (.13, .14, .19, 1) if self.background else (0,0,0,0)
