--- a/app/screens/widgets/emptybutton.kv
+++ b/app/screens/widgets/emptybutton.kv
@@ -5,6 +5,8 @@
     background_down: 'atlas://data/images/defaulttheme/button_pressed'
     background_color: (.13, .14, .19, 1)
     color: (.2, .64, .81, 1)
+    size_hint_y: None
+    height: 40
     canvas.before:
         Color:
             rgba: (.2, .64, .81, 1)
