--- a/app/screens/widgets/widgets_styles.kv
+++ b/app/screens/widgets/widgets_styles.kv
@@ -9,7 +9,8 @@
     multiline: False
     write_tab: False
     password_mask: "o"
-    background_color:  (0 ,0 ,0 , 0)
+    background_color: (0 ,0 ,0 , 0)
+    selection_color: (0.1843, 0.6549, 0.8313, 0.25)
 
 <CheckBox>:
     background_checkbox_normal: './assets/icons/square_2.png'
