--- a/app/screens/buy_screen.kv
+++ b/app/screens/buy_screen.kv
@@ -7,6 +7,7 @@
 #:import EmptyButton screens.widgets.emptybutton
 #:import DataTable screens.widgets.datatable
 #:import SearchTextInput screens.widgets.searchtextinput
+#:import SelectOptionDropDown screens.widgets.selectoptiondropdown
 #:import dp kivy.metrics.dp
 
 <Buy>:
@@ -21,16 +22,16 @@
         BoxLayout:
             id: form_layout
             orientation: 'vertical'
-            pos_hint: {'center_x': .5}
+            pos_hint: {'center_x':.5}
             size_hint_y: None
             height: dp(280)
             padding: dp(100), dp(0)
             canvas.before:
-                Color: 
-                    rgba: (1, 1, 1, .4)
+                Color:
+                    rgba: (1, 1, 1, 0.4)
                 Line:
-                    rounded_rectangle: (self.pos[0],self.pos[1],self.size[0],self.size[1], dp(4))
-                    width: .5
+                    rounded_rectangle: (self.pos[0], self.pos[1], self.size[0], self.size[1], dp(4))
+                    width: 0.5
             # Product
             TextField:
                 Icon:
@@ -45,7 +46,7 @@
                 IconButton:
                     id: btn_search_product
                     source: './assets/icons/search_1.png'
-                    on_release: 
+                    on_release:
                         txt_product.focus = True
                         root.btn_search_product_on_press()
             BoxLayout:
@@ -53,7 +54,7 @@
                 spacing: dp(8)
                 BoxLayout:
                     orientation: 'vertical'
-                    size_hint_x: .5
+                    size_hint_x: 0.5
                     # Local code
                     TextField:
                         Icon:
@@ -86,23 +87,29 @@
                         size_hint_y: None
                         height: dp(20)
                     TextField:
-                        InfoLabel:
-                            id: lbl_category
+                        # Category
+                        SelectOptionDropDown:
+                            id: sodd_category
+                            icon: './assets/icons/down.png'
                             text: "VENTAS"
-                        IconButton:
-                            on_press: root.btn_on_press()
-                            source: './assets/icons/down.png'
+                            options: ["VENTAS", "DESCUENTOS", "MAYORISTA"]
+                            on_change: root.on_category_change(self)
+                        # Space
                         Label:
-                            size_hint_x: None
-                            width: dp(50)
+                            size_hint_x: 0.4
                             text: ""
+                        # Date
                         Icon:
                             source: './assets/icons/calendar.png'
+                        Label:
+                            size_hint_x: None
+                            width: dp(5)
+                            text: ""
                         InfoLabel:
                             id: lbl_date
-                            color: [1, 1, 1, .5]
+                            size_hint_x: 0.6
+                            color: (1, 1, 1, 0.8)
                             text: "00/00/0000"
-                    
                     # Sell 1
                     BoxLayout:
                         orientation: 'horizontal'
@@ -132,17 +139,17 @@
                                         on_press: root.btn_add_price_on_press(fraction=0)
                             Screen:
                                 name: "txt"
-                                on_enter: 
+                                on_enter:
                                     txt_add_price_1.focus = True
                                     txt_add_price_1.select_all()
                                 TextInput:
                                     id: txt_add_price_1
                                     text: "1"
                                     input_filter: 'float'
-                                    background_color: (1,1,1,0.9)
-                                    foreground_color: (0,0,0,1)
-                                    cursor_color: (0,0,0,1)
-                                    on_text_validate: 
+                                    background_color: (1, 1, 1, 0.9)
+                                    foreground_color: (0, 0, 0, 1)
+                                    cursor_color: (0, 0, 0, 1)
+                                    on_text_validate:
                                         sm_add_fraction_1.current = "btn"
                                         root.add_item_to_budge(0 ,self.text)
                     # Sell 2
@@ -174,17 +181,17 @@
                                         on_press: root.btn_add_price_on_press(fraction=1)
                             Screen:
                                 name: "txt"
-                                on_enter: 
+                                on_enter:
                                     txt_add_price_2.focus = True
                                     txt_add_price_2.select_all()
                                 TextInput:
                                     id: txt_add_price_2
                                     text: "1"
                                     input_filter: 'float'
-                                    background_color: (1,1,1,0.9)
-                                    foreground_color: (0,0,0,1)
-                                    cursor_color: (0,0,0,1)
-                                    on_text_validate: 
+                                    background_color: (1, 1, 1, 0.9)
+                                    foreground_color: (0, 0, 0, 1)
+                                    cursor_color: (0, 0, 0, 1)
+                                    on_text_validate:
                                         sm_add_fraction_2.current = "btn"
                                         root.add_item_to_budge(1 ,self.text)
                     # Sell 3
@@ -216,17 +223,17 @@
                                         on_press: root.btn_add_price_on_press(fraction=2)
                             Screen:
                                 name: "txt"
-                                on_enter: 
+                                on_enter:
                                     txt_add_price_3.focus = True
                                     txt_add_price_3.select_all()
                                 TextInput:
                                     id: txt_add_price_3
                                     text: "1"
                                     input_filter: 'float'
-                                    background_color: (1,1,1,0.9)
-                                    foreground_color: (0,0,0,1)
-                                    cursor_color: (0,0,0,1)
-                                    on_text_validate: 
+                                    background_color: (1, 1, 1, 0.9)
+                                    foreground_color: (0, 0, 0, 1)
+                                    cursor_color: (0, 0, 0, 1)
+                                    on_text_validate:
                                         sm_add_fraction_3.current = "btn"
                                         root.add_item_to_budge(2 ,self.text)
                 # Image
@@ -265,7 +272,7 @@
                     id: tbl_products
                     size_hint_y: None
                     height: self.minimum_height
-                    header_background_color: [1,1,1,0.5]
-                    hint_sizes: [0.1,0.7,0.2]
+                    header_background_color: (1, 1, 1, 0.5)
+                    hint_sizes: (0.1, 0.7, 0.2)
                     header: ["Local code", "Product", "Quantity"]
                     on_selected_row: root.on_selected_row()
