--- a/app/screens/home_screen.kv
+++ b/app/screens/home_screen.kv
@@ -2,6 +2,7 @@
 #:include screens/widgets/widgets_styles.kv
 #:import CategoryButton screens.widgets.categorybutton
 #:import IconButton screens.widgets.iconbutton
+#:import dp kivy.metrics.dp
 
 
 <HomeWindow>:
@@ -12,69 +13,63 @@
         BoxLayout:
             id: categories_layout
             orientation: 'vertical'
-            size_hint: None,None
-            size: 280, root.size[1]
-            pos_hint: {'center_y':0.5,'left':1}
-            spacing: 5
+            size_hint: None, None
+            size: dp(280), root.size[1]
+            pos_hint: {'center_y':.5, 'left':1}
+            spacing: dp(5)
             canvas.before:
-                Color: 
-                    rgba: (1, 1, 1, .5)
+                Color:
+                    rgba: (1, 1, 1, 0.5)
                 Rectangle:
-                    size: 2, self.size[1]
+                    size: dp(2), self.size[1]
                     pos: self.size[0], self.pos[1]
             Image:
-                id: logo
+                id: img_logo
                 source: './assets/images/logo_big.png'
                 fit_mode: 'contain'
                 size_hint_y: None
-                height: 130
+                height: dp(130)
             # Buy
             CategoryButton:
                 id: btn_buy
                 text: "Buy"
                 icon: './assets/icons/shopping_cart.png'
-                screen_name: "prices"
-                on_press: 
-                    root.change_category(self)
+                screen_name: "buy"
+                on_press: root.change_category(self)
             # Budgets
             CategoryButton:
                 id: btn_budgets
                 text: "Budgets"
                 icon: './assets/icons/form_1.png'
-                on_press: 
-                    root.change_category(self)
+                on_press: root.change_category(self)
             # Manage Prices
             CategoryButton:
                 id: btn_manage_prices
                 text: "Manage Prices"
                 icon: './assets/icons/edit_1.png'
                 screen_name: "manage"
-                on_press: 
-                    root.change_category(self)
+                on_press: root.change_category(self)
             # Print tables
             CategoryButton:
                 id: btn_print_tables
                 text: "Print tables"
                 icon: './assets/icons/table_1.png'
-                on_press: 
-                    root.change_category(self)
+                on_press: root.change_category(self)
             # Settings
             CategoryButton:
                 id: btn_settings
                 text: "Settings"
                 icon: './assets/icons/settings_1.png'
-                on_press: 
-                    root.change_category(self)
+                on_press: root.change_category(self)
             Label:
-                id: cat_space
+                id: spc_categories
             # Log out
             CategoryButton:
                 id: btn_log_out
                 text: "Log out"
                 icon: './assets/icons/log_out.png'
-                height: 70
-                on_release: 
-                    root.log_out()
+                height: dp(70)
+                on_release: root.log_out()
         # Home
         BoxLayout:
             orientation: 'vertical'
@@ -82,12 +77,12 @@
             BoxLayout:
                 orientation: 'horizontal'
                 size_hint_y: None
-                height: 25
-                padding: 10,2,2,2
-                spacing: 4
+                height: dp(25)
+                padding: dp(10), dp(2), dp(2), dp(2)
+                spacing: dp(4)
                 canvas.before:
-                    Color: 
-                        rgba: (1, 1, 1, .05)
+                    Color:
+                        rgba: (1, 1, 1, 0.05)
                     Rectangle:
                         size: self.size
                         pos: self.pos
@@ -100,29 +95,22 @@
                     font_size: 16
                 IconButton:
                     source: './assets/icons/minus.png'
-                    size: 14, 14
-                    on_release: 
-                        root.minimize()
+                    size: dp(14), dp(14)
+                    on_release: root.minimize()
                 IconButton:
                     source: './assets/icons/square_2.png'
-                    size: 14, 14
-                    on_release: 
-                        root.maximize()
+                    size: dp(14), dp(14)
+                    on_release: root.maximize()
                 IconButton:
                     source: './assets/icons/cross_bold.png'
-                    size: 14, 14
-                    on_release: 
-                        app.stop()
+                    size: dp(14), dp(14)
+                    on_release: app.stop()
             # Screen
             ScreenManager:
                 id: home_screen_manager
                 Screen:
                     name: "none"
-                Screen:
-                    id: buy_screen
-                    name: "prices"
-                    Buy
-                Screen:
-                    id: manage_prices_screen
+                Buy:
+                    name: "buy"
+                ManagePrices:
                     name: "manage"
-                    ManagePrices
