feat: add filtering to option fields (dropdown)

--- a/app/screens/buy_screen.kv
+++ b/app/screens/buy_screen.kv
@@ -93,10 +93,10 @@
                             icon: './assets/icons/down.png'
                             text: "VENTAS"
                             options: ["VENTAS", "DESCUENTOS", "MAYORISTA"]
-                            on_change: root.on_category_change(self)
+                            on_select: root.on_category_change(self)
                         # Space
                         Label:
-                            size_hint_x: 0.4
+                            size_hint_x: 0.2
                             text: ""
                         # Date
                         Icon:
