style: reduce height of TextInputs

--- a/app/screens/widgets/widgets_styles.kv
+++ b/app/screens/widgets/widgets_styles.kv
@@ -9,6 +9,8 @@
     multiline: False
     write_tab: False
     password_mask: "o"
+    size_hint_y: None
+    height: 35
     background_color: (0 ,0 ,0 , 0)
     selection_color: (0.1843, 0.6549, 0.8313, 0.25)
 
